k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl # deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client # label for the pod being created
    spec:
      containers:
        - name: client
          image: boisoth/client:latest
--- # create another object
apiVersion: v1
kind: Service
metadata:
  name: client-srv # Cluster IP Service name
spec:
  selector: # Tell service what pods it will allow access to
    app: client # From deployment template label for pod
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
