k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts # telling the service to find all pods named app: posts
  ports:
    - name: posts # array
      protocol: TCP
      port: 4000
      targetPort: 4000
