k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl # deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query # label for the pod being created
    spec:
      containers:
        - name: query
          image: boisoth/query:latest
--- # create another object
apiVersion: v1
kind: Service
metadata:
  name: query-srv # Cluster IP Service name
spec:
  selector: # Tell service what pods it will allow access to
    app: query # From deployment template label for pod
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
